--- a/colorwise/package.json
+++ b/colorwise/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-colorful": "^5.6.1",
+    "react-dom": "^18.3.1",
+    "react-image-color-picker": "^1.3.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
