--- a/colorwise/package.json
+++ b/colorwise/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://draunger.github.io/colorwise",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -26,6 +27,7 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
+    "gh-pages": "^6.2.0",
     "globals": "^15.11.0",
     "react-router-dom": "^6.28.0",
     "vite": "^5.4.10"
