--- a/colorwise/package.json
+++ b/colorwise/package.json
@@ -5,13 +5,13 @@
   "type": "module",
   "homepage": "https://draunger.github.io/colorwise",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
-  },
+  "dev": "vite",
+  "build": "vite build",
+  "lint": "eslint .",
+  "preview": "vite preview",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d dist"
+},
   "dependencies": {
     "react": "^18.3.1",
     "react-colorful": "^5.6.1",
